# hybrid-book-recommender

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  GEMINI.md  Makefile  README.md  app.py  dvc.yaml  launch_recommender.bat  main.py  params.yaml  pyproject.toml  template.py  validate_recommender.bat
.github/workflows/: main.yaml
config/: config.yaml  params.yaml  schema.yaml
notebooks/: 01_eda_and_feasibility.ipynb
references/: dataset_analysis.md  folder_structure.md  product_requirements.md  project_overview.md
reports/docs/: aws_setup_guide.md  eda_findings.md  hybrid_inference.md  hybrid_recommender_engineering_report.md  model_trainer.md  phase_04_deployment_report.md  phase_05_cloud_deployment.md  stage_00_ingestion_report.md  stage_01_transformation_report.md  stage_01_validation_report.md  stage_02_transformation_report.md  stage_02_validation_report.md  stage_05_inference_report.md  stage_06_evaluation_report.md  stage_3.6_enrichment_evaluation.md  stage_3.7_tone_evaluation.md  ui_framework_assessment.md  ui_implementation_plan.md
reports/docs/architecture/: agentic_layer.md  dvc_pipeline_report.md
reports/docs/decisions/: agentic_framework.md  ui_implementation_plan.md
reports/docs/evaluations/: agentic_layer_enhancement.md  codebase review.md  codebase_review.md  dx_report.md  test_suite_report.md
reports/docs/references/: dataset_analysis.md  project_overview.md
reports/docs/runbooks/: cloud_deployment.md
reports/docs/workflows/: agentic_layer_implementation.md  deployment_report.md  phase_04_deployment_report.md  ui_implementation_plan.md
reports/docs/workflows/hybrid_pipeline/: stage_01_ingestion_report.md  stage_03_transformation_report.md  stage_04_training_report.md  stage_05_inference_report.md  stage_06_evaluation_report.md  stage_3.5_enrichment_report.md  stage_3.7_tone_evaluation.md  stage_3.8_tone_analysis_report.md
scripts/: deploy.sh
src/agent/: agent.py  prompts.py  schemas.py  tools.py
src/app/: data_loaders.py  main.py  styles.py
src/components/: batch_prediction.py  data_enrichment.py  data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py  tone_analysis.py
src/config/: configuration.py
src/constants/: __init__.py
src/entity/: config_entity.py  recommendation_entity.py
src/models/: hybrid_recommender.py  llm_utils.py
src/pipeline/: stage_01_ingestion.py  stage_02_transformation.py  stage_02_validation.py  stage_03_enrichment.py  stage_03_transformation.py  stage_04_tone_analysis.py  stage_04_training.py  stage_05_prediction.py  stage_06_evaluation.py  stage_06_training.py  stage_07_prediction.py  stage_08_evaluation.py
src/scripts/: run_enrichment.py  run_tone_analysis.py  test_broad_accuracy.py  test_enrichment_accuracy.py  test_tone_accuracy.py
src/tests/: conftest.py  test_broad_accuracy.py  test_enrichment_accuracy.py  test_recommender.py  test_tone_accuracy.py
src/utils/: common.py  exception.py  logger.py  mlflow_config.py  paths.py
tests/: conftest.py  test_broad_accuracy.py  test_recommender.py  test_tone_accuracy.py
tests/integration/: test_broad_accuracy.py  test_enrichment_accuracy.py  test_tone_accuracy.py
tests/unit/: test_agent.py  test_recommender.py
