[project]
name = "hybrid-book-recommender"
version = "0.1.0"
description = "A hybrid book recommendation system combining semantic search (ChromaDB + Sentence-Transformers) with a popularity-weighted scoring algorithm."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.5",
    "dvc>=3.64.1",
    "ensure>=1.0.4",
    "google-generativeai>=0.8.5",
    "gradio>=4.0.0",
    "langchain>=1.1.2",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.1.3",
    "langchain-huggingface>=1.2.0",
    "matplotlib>=3.10.7",
    "mlflow>=3.7.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "python-box>=7.3.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.48.0",
    "typer>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.1.0",
    "notebook>=7.5.0",
    "pytest>=9.0.1",
    "pytest-cov>=4.1.0",
    "pyright>=1.1.350",
    "ruff>=0.11.0",
    "types-pyyaml>=6.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["**/__pycache__", "notebooks/**"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["notebooks/**", ".venv/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "W", "B", "SIM", "C4", "RUF"]
ignore = [
    "N803",  # Argument name mixedCase — waived for DataIngestionConfig.source_URL
    "N806",  # Variable in function mixedCase — waived for STATUS_FILE
    "N815",  # Variable in class scope mixedCase — waived for DataIngestionConfig.source_URL
    "N818",  # Exception name should end in Error — CustomException is an established public API
    "B904",  # raise-without-from-inside-except — CustomException wraps traceback in message body;
             # adding `raise ... from err` would create a confusing duplicate exception chain
    "E501",  # Line too long — docstrings and inline comments cannot be auto-wrapped without
             # loss of readability; enforced via editor config only
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "integration: marks tests that require DVC artifacts to be present (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/scripts/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
